# bilevel_optimized_INR

./: .gitignore  LICENSE  NOTICE  README.md  bilevel_inr.py  bilevel_mbir.py  pyproject.toml  run.sh
inr/: config.py  data.py  load_config.py  loss_fn.py  model.py  train.py
inr/config/: config_cartesian.json
inr/utils/: __init__.py  utils.py
